# c-hooks

./: .gitignore  .gitmodules  CMakeLists.txt  TODO  bugs  vimcommands
data/: config.json
img/: player_fall.gal  player_idle.gal  player_walk.gal
include/: config.h  data.h  enemy.h  objects.h  player.h  textures.h
src/: config.c  data.c  enemy.c  main.c  objects.c  player.c  textures.c
